--- a/CobianReflectorTG/CobianReflectorTG.csproj
+++ b/CobianReflectorTG/CobianReflectorTG.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckBot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsBot.cs" />
